2004-05-06  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ClassScout/ClassScout.cs: try catch to prevent potentialy
	strange threading interactions.

2004-05-04  John Luke  <jluke@cfl.rr.com>

	* Makefile.am: make Services/StockIcons.cs regen properly
	and pass make distcheck

2004-05-04  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* Makefile.am: Services/StockIcons.cs update is triggered by a changes
	in build/data/resources/icons dir

2004-05-03  Francisco "Paco" Martinez  <paco@mfcon.com>

	* Gui/Dialogs/CommonAboutDialog.cs: Added Paco Martinez name to the
	list of authors

2004-05-02  Todd Berman  <tberman@sevenl.net>

	* Services/Project/IProjectService.cs
	* Services/Project/DefaultProjectService.cs: Add events for Files being
	added and removed.
	* Gui/Pads/ClassScout/ClassScout.cs: Properly update on files added
	and removed.

2004-05-02  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: expose gac lib
	location finder
	* Services/ParserService/AssemblyInformation.cs: remove previous fix
	* Services/ParserService/IParserService.cs: expose gac lib location
	finder
	* Gui/Dialogs/ReferenceDialog/GacReferencePanel.cs: sort properly
	* Internal/Project/Project/ProjectReference.cs: Use parser method to
	find gac lib location.

2004-05-01  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/TreeViewOptions.cs: notify main window that gui effecting
	changes may have occured, update the menu.

2004-05-01  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/OpenTaskView.cs: Fix gtk+2.4 regression.
	* Services/ParserService/DefaultParserService.cs: load assemblies
	out of the GAC for indexing.

2004-04-30  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/HelpBrowser/MonodocTreePad.cs: Hide doc nodes without
	any docs. This is an ugly ugly solution, but it works. Feel free
	to replace it with something better that looks nice.

2004-04-29  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: commenting out