@@ -1,3 +1,7 @@
+2004-05-07  Todd Berman  <tberman@sevenl.net>
+
+	* Gui/Pads/ClassScout/ClassScout.cs: adding a lock.
+
 2004-05-06  Todd Berman  <tberman@sevenl.net>
 
 	* Gui/Pads/ClassScout/ClassScout.cs: try catch to prevent potentialy
